comment margin upgrade for prevent broken layout when comment is too long

--- a/plans/static/plans/plan_detail.css
+++ b/plans/static/plans/plan_detail.css
@@ -33,6 +33,11 @@ textarea::placeholder {
   height: 0.05rem;
 }
 
+.comment {
+  margin-top: 6px;
+  margin-bottom: 6px;
+}
+
 .comment_name {
   min-width: 50px;
 }
